--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -10,25 +10,16 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:text="Button" />
-
     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/button1"
         android:layout_centerHorizontal="true"
         android:text="@string/hello_world" />
 
     <com.beardedhen.androidbootstrap.BootstrapEditText
         android:id="@+id/login_username"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
@@ -42,7 +33,7 @@
 
     <com.beardedhen.androidbootstrap.BootstrapEditText
         android:id="@+id/login_password"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/login_username"
         android:layout_centerHorizontal="true"
@@ -55,12 +46,26 @@
         android:id="@+id/login_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/login_password"
+        android:layout_alignRight="@+id/login_password"
         android:layout_below="@+id/login_password"
-        android:layout_centerHorizontal="true"
+        android:onClick="loginClick"
         android:text="@string/login_login"
         bootstrapbutton:bb_roundedCorners="true"
-                bootstrapbutton:bb_size="small"
+        bootstrapbutton:bb_size="small"
         bootstrapbutton:bb_type="info" >
+    </com.beardedhen.androidbootstrap.BootstrapButton>
+
+    <com.beardedhen.androidbootstrap.BootstrapButton
+        android:id="@+id/login_register"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_margin="5dp"
+        android:onClick="registerClick"
+        android:text="@string/login_register"
+        bootstrapbutton:bb_roundedCorners="true" >
     </com.beardedhen.androidbootstrap.BootstrapButton>
 
 </RelativeLayout>
