--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -5,5 +5,17 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
+    <item
+        android:id="@+id/action_friend"
+        android:icon="@drawable/ic_action_group"
+        android:showAsAction="always"
+        android:title="@string/menu_friend">
+    </item>
+    <item
+        android:id="@+id/action_search"
+        android:icon="@android:drawable/ic_menu_zoom"
+        android:showAsAction="always"
+        android:title="@string/menu_search">
+    </item>
 
 </menu>
