--- a/res/layout/item_friend.xml
+++ b/res/layout/item_friend.xml
@@ -1,14 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:paddingLeft="17dp" >
+
+    <ImageView
+        android:id="@+id/friend_photo"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
+        android:src="@drawable/ic_launcher" />
 
     <TextView
         android:id="@+id/friend_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
+        android:layout_toRightOf="@+id/friend_photo"
+        android:padding="5dp"
         android:text="Large Text"
         android:textAppearance="?android:attr/textAppearanceMediumInverse" />
 
