--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -10,13 +10,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="@string/hello_world" />
-
     <com.beardedhen.androidbootstrap.BootstrapEditText
         android:id="@+id/login_username"
         android:layout_width="fill_parent"
@@ -68,5 +61,23 @@
         android:text="@string/login_register"
         fontawesometext:bb_roundedCorners="true" >
     </com.beardedhen.androidbootstrap.BootstrapButton>
+
+    <ImageView
+        android:id="@+id/login_logo"
+        android:layout_width="111dp"
+        android:layout_height="111dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="33dp"
+        android:src="@drawable/ic_launcher" />
+
+    <TextView
+        android:id="@+id/login_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/login_logo"
+        android:layout_centerHorizontal="true"
+        android:text="@string/app_name"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
 </RelativeLayout>
